...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Избранное" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="COX-IK-2Wa">
                    <rect key="frame" x="24" y="55" width="165.5" height="37.5"/>
                    <accessibility key="accessibilityConfiguration" identifier="FavouritesLabel"/>
                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="32"/>
                    <color key="textColor" name="Light"/>
                    <nil key="highlightedColor"/>
                </label>
...
                        <constraint firstAttribute="height" constant="162" id="4Gk-75-eIb"/>
                        <constraint firstAttribute="width" constant="248" id="HzY-Ow-RbF"/>
                    </constraints>
                </imageView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="It3-6K-IUK">
                    <rect key="frame" x="24" y="158.5" width="164" height="29"/>
                    <accessibility key="accessibilityConfiguration" identifier="FindMovieButton"/>
                    <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
                    <state key="normal" title="Найти любимые фильмы">
                        <color key="titleColor" name="Purpure"/>
                    </state>
                </button>
            </subviews>
...
