...
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Gi2-2S-Grw">
                    <rect key="frame" x="24" y="200" width="366" height="48"/>
                    <subviews>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Поиск фильмов" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XOj-fY-Wem">
                            <rect key="frame" x="0.0" y="0.0" width="276" height="48"/>
                            <color key="backgroundColor" name="LightGray"/>
                            <accessibility key="accessibilityConfiguration" identifier="FindMovieTF"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="48" id="rOv-aT-uGU"/>
                            </constraints>
                            <color key="textColor" name="Light"/>
                            <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                            <textInputTraits key="textInputTraits"/>
...
